--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #48a4ff;
+      background: linear-gradient(130deg, #48a4ff, #63c9b4);
     }
 
     .card {
@@ -109,6 +109,13 @@
       color: #fff;
     }
 
+    .social-link.spotify{
+    background-color: #2eae0ab9;
+      color: #fff;
+    }
+
+
+
   </style>
 </head>
 <body>
@@ -128,6 +135,8 @@
     <a href="https://www.linkedin.com/in/samsamsemy/" class="social-link linkedin" target="_blank">
       <i data-feather="linkedin"></i><br>LinkedIn
     </a>
+    <a href="https://open.spotify.com/user/31zayetk7xgybjad3zrem2fqjzpe?si=af7b84972b304faf" class="social-link spotify" target="_blank">
+      <i data-feather="spotify"></i><br>spotify
     </a>
   </div>
 </div>
